# OCons

./: .gitignore  .gitmodules  .merlin  .travis-ocaml.sh  .travis.yml  LICENSE  Makefile  README.md  README.txt  _tags  config.json  dune-project  example.native  flake.nix  main.byte  main.native  main.opam  ocamlpaxos.opam  ocons-conn-mgr.opam  ocons-core.opam  ocons-variants.opam  ocons.opam  opam  paxos_core.mli  test.native
.github/workflows/: workflow.yml
_build/: _digests  _log  oUnit-First example test suite.cache
_build/src/: foo.cmi  foo.cmo  foo.cmt  foo.cmx  foo.ml.depends  main.byte  main.cmi  main.cmo  main.cmt  main.cmx  main.ml  main.ml.depends  main.native
_build/tests/: example.cmi  example.cmo  example.cmt  example.cmx  example.ml.depends  example.native
bench/: bench_loop.ml  bench_loop.ml.old  dune
docs/diss/: Dissertation.texnicle  Dissertation_main.tex  Dissertation_main.toc  refs.bib
docs/diss/figs/: cuarms.eps  diagram.eps  diagram.fig  diagram.fig.bak
docs/diss/include/: conclusion.aux  conclusion.tex  evaluation.aux  evaluation.tex  implementation.aux  implementation.tex  introduction.aux  introduction.tex  introduction.tex.aux  preparation.aux  preparation.tex
docs/progress/: progress-report.texnicle  progress-report_main.tex
fuzz/: dune  lib_line_prot.ml
impl/: dune  main.ml
impl/bench/: ctree_bench.ml  dune
impl/fuzz/: command_tree.ml  dune  test_msgs.ml  test_replication.ml
impl/lib/: actions_f.ml  client_forwarder.ml  conspire.ml  conspire_array.ml  conspire_collate.ml  conspire_command_tree.ml  conspire_command_tree_hashed.ml  conspire_dc.ml  conspire_f.ml  conspire_f_hash.ml  conspire_leader.ml  conspire_leader_dc.ml  conspire_mp.ml  conspire_single_shot.ml  conspire_sync.ml  delay_buffer.ml  dune  impl_core.ml  impl_core.mli  line_prot.ml  paxos.ml  prevote.ml  prevote_sbn.ml  raft.ml  raft_sbn.ml  test_command_tree.ml  test_command_tree_hash.ml  test_conspire.ml  test_conspire_mp.ml  test_conspire_ss.ml  test_paxos.ml  test_raft.ml  test_varpaxos.ml  test_varraft.ml  types.ml  utils.ml  var_impl.ml  var_paxos.ml  var_raft.ml
impl/test/: dune  test_command_tree.ml  test_command_tree_hash.ml  test_conspire.ml  test_conspire_dc.ml  test_conspire_leader.ml  test_conspire_mp.ml  test_conspire_ss.ml  test_paxos.ml  test_raft.ml
lib/: .merlin  acceptor.ml  ballot.ml  ballot.mli  client.ml  client.mli  client_api.capnp  client_handler.ml  config.ml  config.mli  consensus_intf.ml  dune  external_infra.ml  external_infra.mli  immutable_store.ml  immutable_store.mli  immutable_store_intf.ml  infra.ml  infra.mli  internal_infra.ml  internal_infra.mli  leader.ml  leader.mli  leader_replica.ml  line_prot.ml  log.ml  log.mli  message.ml  message_api.capnp  messaging.ml  messaging_api.capnp  msg_layer.ml  msg_layer.mli  mutable_store.ml  owal.ml  owal.mli  paxos.ml  paxos_core.ml  paxos_core.mli  process_message.ml  (+14 more)
lib/protobuf/: message.proto
lib/rpc/: .merlin  dune
microclient/: .merlin  dune  microclient.ml
microclient/protobuf/: .merlin  dune
ocamlpaxos_server/: .merlin
ocons_conn_mgr/: dune  ocons_conn_mgr.ml  ocons_conn_mgr.mli  persistent_conn.ml  persistent_conn.mli  util.ml
paxos/: dune  main.ml  paxos.ml  paxos.mli  test.ml  utils.ml
paxos/fuzz/: dune  test_msgs.ml
paxos/lib/: Types.ml  Utils.ml  dune  line_prot.ml  paxos_core.ml  paxos_core.mli  sm.ml  test.ml  types.ml  utils.ml
paxos/paxos_core/: dune  functor.ml  test.ml  types.ml  utils.ml
raft/: dune  main.ml  raft.ml  test.ml
scripts/: analysis.py  config.json  dune  micro_bench.ml  run.sh  test.py
src/: .merlin  acceptor.ml  ballot.ml  ballot.mli  client.ml  client.mli  config.ml  config.mli  foo.ml  jbuild  leader.ml  log.ml  main.ml  message.ml  pval.ml  pval.mli  quorum.mli  replica.ml  tests.ml  types.ml
src/app/: client.ml  client.mli
src/leader/: leader.ml
src/node/: client.ml  client.mli  leader.ml  replica.ml
src/replica/: replica.ml
src/rpc/: .merlin  dune  message_api.capnp  message_api.ml  message_api.mli
test/: client.ml  dune  log.ml  msg_layer.ml  paxos_core.ml  pcore.ml  test.ml  wal.ml
tests/: .merlin  example.ml  test.ml
