(library
 (name ocamlpaxos)
 (public_name ocamlpaxos)
 (libraries base lwt lwt.unix lwt_ppx logs.lwt logs.fmt fmt.tty
   capnp-rpc-lwt capnp-rpc-net capnp-rpc-unix)
 (preprocess
  (pps lwt_ppx)))

(rule
 (targets messaging_api.ml messaging_api.mli)
 (deps messaging_api.capnp)
 (action
  (run capnpc -o %{bin:capnpc-ocaml} %{deps})))

(env
 (dev
  (flags
   (:standard -w -39-53))))
