(library
 (name ocamlpaxos)
 (public_name ocamlpaxos)
 (libraries base lwt lwt.unix logs.lwt logs.fmt fmt.tty capnp hex unix_capnp_messaging owal)
 (preprocess
  (pps ppx_deriving_protobuf)))

(rule
 (targets messaging_api.ml messaging_api.mli)
 (deps messaging_api.capnp)
 (action
  (run capnpc -o %{bin:capnpc-ocaml} %{deps})))

(env
 (dev
  (flags
   (:standard -w -39-53-55))))
