(executable
 (name main)
 (public_name ocons-paxos)
 (package ocons-variants)
 (libraries paxos_lib ocons-core core async async.log_extended)
 (preprocess
  (pps ppx_jane ppx_log ppx_accessor))
 (modules main))

(library
 (name paxos_lib)
 (libraries ocons-core core async async.log_extended)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_log ppx_accessor))
 (modules paxos test))

(env
 (dev
  (flags
   (:standard -w -39-53-55))))
