(executable
 (name main)
 (public_name ocons-paxos)
 (package ocons-variants)
 (libraries paxos_lib ocons-core core async async.log_extended)
 (preprocess
  (pps ppx_jane ppx_log ppx_accessor))
 (modules main))

(library
 (name paxos_lib)
 (instrumentation
  (backend bisect_ppx))
 (libraries ocons-core core async async.log_extended)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_log ppx_accessor))
 (modules paxos))

(env
 (dev
  (flags
   (:standard -w -39-53-55))))
